--- a/style.css
+++ b/style.css
@@ -126,3 +126,29 @@ h1,h2,h3,h4,h5,h6,p{
     transform: scale(1.05);
     transition: all 0.3s ease;
 }
+.testimonial_card{
+    border:none; 
+    width: 358.667px; 
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.testimonial_img{
+    width: 90px;
+    border-radius: 50%;
+    border: 4px solid #fff;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+}
+.testmonial_h3{
+    font-size: 18px;
+    font-weight: bold;
+    margin: 10px 0 5px 0;
+    color: #111;
+}
+.testimonial_h4{
+    font-size: 14px;
+    color: #999;
+    margin: 0;
+}
+
+
