--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ h1,h2,h3,h4,h5,h6,p{
     padding-left: 13px;
     padding-bottom: 17px;
 }
-.card:hover{
+.service_card:hover{
     transform: scale(1.05);
     transition: all 0.3s ease;
 }
@@ -130,6 +130,7 @@ h1,h2,h3,h4,h5,h6,p{
     border:none; 
     width: 358.667px; 
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding-bottom: 50px;
 }
 .testimonial_img{
     width: 90px;
@@ -151,4 +152,51 @@ h1,h2,h3,h4,h5,h6,p{
     margin: 0;
 }
 
+.team_image{
+    width: 261px; 
+    height:261px;
+      
+}
+.fnt_awsm_decoration{
+    padding-right:40px;
+    text-decoration:none;
+}
 
+.image_overlay{
+    position: relative;
+}
+.img_ovrly{
+    position: absolute;
+    bottom: 0;
+    opacity: 0;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.85);
+    filter: grayscale(100);
+    height: 40px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size:20px;
+    color: #414C63;
+}
+.image_overlay:hover .img_ovrly {
+  opacity: 1;
+}
+.crd_tittl_dcrtion{
+  font-weight: 700;
+  margin-bottom: 5px;
+  margin-top: 15px;
+  font-size: 18px;
+  color: #414c64;
+  text-align: center;
+  padding-right: 50px;
+}
+.crd_subtittl_dcrtion{
+  display: block;
+  font-size: 15px;
+  font-weight: 400;
+  color: #aaaaaa;
+  text-align: center;
+  padding-right: 50px;
+}
