--- a/style.css
+++ b/style.css
@@ -251,3 +251,14 @@ h1,h2,h3,h4,h5,h6,p{
     background-color:white;
     color:#2d405f;
 }
+.faq_txt_p{
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 400;
+    color: black;
+    text-decoration: none;
+}
+.faq_txt_p:hover{
+    color:#3b4ef8;
+    text-decoration: none;
+}
