SRM | third_part_img

--- a/style.css
+++ b/style.css
@@ -78,8 +78,12 @@ h6_txt{
 h1,h2,h3,h4,h5,h6,p{
     font-family: 'Krub', sans-serif;
 }
-.rd_part_img{
+.third_part_img{
     max-width: 45%;
+}
+.third_part_img:hover{
+    transform: scale(2.05);
+    transition:all 0.3s ease ;
 }
 
 .txt_p_sm{
