--- a/style.css
+++ b/style.css
@@ -1,3 +1,41 @@
+
+.text_clr{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 0 10px 30px;
+    font-family: "Krub", sans-serif;
+    font-size: 14px;
+    font-weight: 600;
+    color: #2d405f;
+    white-space: nowrap;
+    transition: 0.3s;
+  }
+  .get_strted{
+    background: #e2e5fe;
+    padding: 9px 25px;
+    margin-left: 30px;
+    border-radius: 5px;
+    font-weight: 600;
+    color: #3b4ef8;
+    width:140px;
+}
+
+@media (min-width: 1400px) {
+    .container{
+        max-width: 1320px!important;
+    }
+}
+@media (min-width: 1400px) {
+    .navbar-light{
+        background-color: #f6f7ff!important;
+        border-bottom: 2px solid #eceefe;
+    }
+}
+
+
+
+
 .dis_1_txt{
    font-size:48px;
    font-weight:700;
